--- a/projeto-site/public/index.html
+++ b/projeto-site/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soulsite</title>
+    <script src="funcoes.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/bonfireic.png" type="image/x-icon">
 </head>
 
 <body>
@@ -13,7 +15,10 @@
         <div class="container">
 
             <div class="logo">
-                <a href="">Soulsite</a>
+                <a href="">
+                    <img src="img/bonfireic1.png" alt="">
+                    <span>Soul<span class="atual">site</span></span>
+                </a>
             </div>
             <div class="search-bar">
                 <div>
@@ -21,15 +26,20 @@
                     <button>search</button>
                 </div>
             </div>
-            <div class="usuario">
+            <div class="usuario" id="usuario">
                 <a href="login.html">Entrar</a>
                 <a href="cadastro.html">Cadastrar</a>
+            </div>
+            <div class="usuario-online" id="usr_online">
+                <a onclick="fn_menu_usuario()">
+                    <img src="img/user-solaire.png" alt="">
+                </a>
             </div>
             <div class="menu">
                 <ul>
                     <li><a href="index.html" class="atual">Inicio</a></li>
                     <li><a href="Historia.html">História</a></li>
-                    <li><a href="Suporte.html">Suporte</a></li>
+                    <a href="Suporte.html" id="no_log_contact">Suporte</a>
                 </ul>
             </div>
         </div>
@@ -72,7 +82,18 @@
                     room up above, accessable by walking up the tower to the left of the ballista machine (When facing
                     the machine).</span>
             </div>
+            <div class="carousel-item">
+                <img src="img/Oldkingallantwik.png" alt="">
+                <h2>Old king Allant</h2>
+                <h4>Demon's Souls boss</h4>
+                <span>Allant, driven by a lust for power, became a demon after he made a pact with The Old One. This
+                    boss is known as the 'False King' because it is not the REAL Allant. After Allant allied with the
+                    Old One, he was given immense power. Using this power, he fashioned a demon made in his own image,
+                    made to look like his old self at the height of his power. This demon would lead the demon armies
+                    against Boletaria.</span>
+            </div>
             <div style="text-align: center;">
+                <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
             </div>
@@ -175,6 +196,72 @@
             </div>
         </div>
     </div>
+    <div class="popup-menu" id="menu_user">
+        <div class="container-popup">
+            <div class="popup-image">
+                <a href="perfil.html">
+                    <img src="img/user-solaire.png" alt="">
+                </a>
+                <div class="username">
+                    <b id="usr_nome"></b>
+                </div>
+            </div>
+            <div class="options-popup">
+                <div class="popup-option">
+                    <a href="perfil.html">
+                        <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32px" height="32px"
+                            viewBox="0 0 24 24" aria-labelledby="personIconTitle" stroke="#ffffff" stroke-width="1"
+                            stroke-linecap="square" stroke-linejoin="miter" fill="none" color="#ffffff">
+                            <title id="personIconTitle">Person</title>
+                            <path
+                                d="M4,20 C4,17 8,17 10,15 C11,14 8,14 8,9 C8,5.667 9.333,4 12,4 C14.667,4 16,5.667 16,9 C16,14 13,14 14,15 C16,17 20,17 20,20" />
+                        </svg>
+                        <span>Geral</span>
+                    </a>
+                </div>
+                <div class="popup-option">
+                    <a href="configuracoes.html">
+                        <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32px" height="32px"
+                            viewBox="0 0 24 24" aria-labelledby="settingsIconTitle" stroke="#fff" stroke-width="1"
+                            stroke-linecap="square" stroke-linejoin="miter" fill="none" color="#fff">
+                            <title id="settingsIconTitle">Settings</title>
+                            <path
+                                d="M5.03506429,12.7050339 C5.01187484,12.4731696 5,12.2379716 5,12 C5,11.7620284 5.01187484,11.5268304 5.03506429,11.2949661 L3.20577137,9.23205081 L5.20577137,5.76794919 L7.9069713,6.32070904 C8.28729123,6.0461342 8.69629298,5.80882212 9.12862533,5.61412402 L10,3 L14,3 L14.8713747,5.61412402 C15.303707,5.80882212 15.7127088,6.0461342 16.0930287,6.32070904 L18.7942286,5.76794919 L20.7942286,9.23205081 L18.9649357,11.2949661 C18.9881252,11.5268304 19,11.7620284 19,12 C19,12.2379716 18.9881252,12.4731696 18.9649357,12.7050339 L20.7942286,14.7679492 L18.7942286,18.2320508 L16.0930287,17.679291 C15.7127088,17.9538658 15.303707,18.1911779 14.8713747,18.385876 L14,21 L10,21 L9.12862533,18.385876 C8.69629298,18.1911779 8.28729123,17.9538658 7.9069713,17.679291 L5.20577137,18.2320508 L3.20577137,14.7679492 L5.03506429,12.7050339 Z" />
+                            <circle cx="12" cy="12" r="1" />
+                        </svg>
+                        <span>Configurações</span>
+                    </a>
+                </div>
+                <div class="popup-option">
+                    <a href="Suporte.html">
+                        <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32px" height="32px"
+                            viewBox="0 0 24 24" aria-labelledby="chatAltIconTitle" stroke="#ffffff" stroke-width="1"
+                            stroke-linecap="square" stroke-linejoin="miter" fill="none" color="#ffffff">
+                            <title id="chatAltIconTitle">Chat</title>
+                            <path d="M13,17 L7,21 L7,17 L3,17 L3,4 L21,4 L21,17 L13,17 Z" />
+                        </svg>
+                        <span>Suporte</span>
+                    </a>
+                </div>
+            </div>
+            <div class="logoff-popup">
+                <div class="popup-option">
+                    <a href="#" onclick="logoff()">
+                        <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32px" height="32px"
+                            viewBox="0 0 24 24" aria-labelledby="exitIconTitle" stroke="#a1261b" stroke-width="1.5"
+                            stroke-linecap="square" stroke-linejoin="miter" fill="none" color="#a1261b">
+                            <title id="exitIconTitle">Exit</title>
+                            <path d="M18 15l3-3-3-3" />
+                            <path d="M11.5 12H20" />
+                            <path stroke-linecap="round" d="M21 12h-1" />
+                            <path d="M15 4v16H4V4z" />
+                        </svg>
+                        <span>Sair</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
@@ -182,6 +269,7 @@
 <script>
     var slideIndex = 0;
     fn_carrossel();
+    verificar_autenticacao();
 
     function fn_carrossel() {
 
@@ -199,4 +287,6 @@
         posicao[slideIndex - 1].className += " active";
         setTimeout(fn_carrossel, 5000);
     }
+
+    let cont = 0;
 </script>
