--- a/projeto-site/public/login.html
+++ b/projeto-site/public/login.html
@@ -5,22 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Soulsite</title>
 </head>
 
 <body>
-    <form id="form_login" method="post" onsubmit="return entrar()">
-        usuário: <input type="text" name="login">
-        <br>
-        senha: <input type="text" name="senha">
-        <br>
-        <button id="btn_entrar">Entrar</button>
-    </form>
-
-    <img src="aguarde.gif" id="img_aguarde" style="display: none;">
-
-    <div id="div_erro" style="background-color: sandybrown; color: maroon; display: none;">
-
+    <div class="form-content">
+        <form id="form_login" method="post" onsubmit="return entrar()">
+            <img src="img/user-solaire.png" alt="">
+            <div class="container-input">
+                <!-- <label>usuário:</label> -->
+                <input type="text" name="login" placeholder="Digite seu nome de usuário">
+            </div>
+            <br>
+            <div class="container-input">
+                <!-- <label>senha:</label> -->
+                <input type="password" name="senha" placeholder="Digite sua senha">
+            </div>
+            <br>
+            <div class="button-field">
+                <button id="btn_entrar">Entrar</button>
+                <button onclick="fn_redirect()" id="teste">Cadastrar</button>
+                <br>
+                <button onclick="fn_redirect()" id="teste2">Cancelar</button>
+            </div>
+        </form>
+        
+        <img src="aguarde.gif" id="img_aguarde" class="img-aguarde">            
+        </div>
     </div>
 </body>
 
@@ -39,20 +51,20 @@
 
                 resposta.json().then(json => {
 
-                    sessionStorage.login_usuario_meuapp = json.nomeUsuario;
-                    sessionStorage.nome_usuario_meuapp = json.nomeUsuario;
+                    sessionStorage.login_usuario_meuapp = json.usr_login;
+                    sessionStorage.nome_usuario_meuapp = json.usr_nome;
 
                     window.location.href = 'index.html';
                 });
 
             } else {
+                alert('Erro de login!');
+                location.reload();
 
-                console.log('Erro de login!');
-
-                response.text().then(texto => {
-                    console.error(texto);
-                    finalizar_aguardar(texto);
-                });
+                // response.text().then(texto => {
+                //     console.error(texto);
+                //     finalizar_aguardar(texto);
+                // });
             }
         });
 
@@ -61,13 +73,24 @@
     function aguardar() {
         btn_entrar.disabled = true;
         img_aguarde.style.display = 'block';
-        div_erro.style.display = 'none';
     }
 
     function finalizar_aguardar(resposta) {
         btn_entrar.disabled = false;
         img_aguarde.style.display = 'none';
         div_erro.style.display = 'block';
-        div_erro.innerHTML = resposta;
+        alert(resposta);
+    }
+
+    function fn_redirect(){
+        let btn1 = document.getElementById("teste");
+        let btn2 = document.getElementById("teste2");
+
+        if(btn1.onclick){
+            window.location.href = "Cadastro.html";
+        }
+        if(btn2.onclick){
+            window.location.href= "index.html";
+        }
     }
 </script>
